[tool.poetry]
name = "d7a"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
bitstring = "^3.1.7"
Cerberus = "1.3.4"
pyserial = ">=3.4.0"
unittest2 = "^1.1.0"
coverage = "^7.2.5"
enum34 = "^1.1.10"
jsonpickle = "^1.3"
paho-mqtt = "^1.5.1"
traceback2 = "^1.4.0"
cogapp = "^3.3.0"
crcmod = "^1.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
