[project]
name = "d7a"
description = "Python Dash7 ALP library"
authors = [
    { name = "Glenn Ergeerts", email = "glenn.ergeerts@aloxy.io" },
    { name = "Liam Oorts", email = "liam.oorts@aloxy.io" },
    { name = "Kwinten Schram", email = "kwinten.schram@aloxy.io" },
    { name = "Dirk Van Haerenborgh", email = "dirk.vanhaerenborgh@aloxy.io" },
    { name = "Bart Jonkers", email = "bart.jonkers@aloxy.io" },
    { name = "Jolanta Tadla", email = "jolanta.tadla@aloxy.io" },
]
requires-python = ">=3.9,<4.0"
dependencies = [
    "bitstring>=4.2.3",
    "cerberus>=1.3.5,<2.0.0",
    "jsonpickle>=3.3.0",
    "crcmod>=1.7,<2.0",
]

readme = "README.md"
license = { text = "Apache-2.0" }
dynamic = ["version"]

[project.optional-dependencies]
examples = [
    "pyserial<3.5",
    "traceback2<1.4.0",
    "paho-mqtt<2.1.0",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.uv]
managed = true
dev-dependencies = [
    "ruff>=0.6.5",
    "pre-commit>=3.8.0",
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "pyright>=1.1.380",
    "pytest-html>=4.1.1",
    "hatch-vcs>=0.4.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["d7a", "tools"]

[tool.pyright]
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"

[tool.ruff]
indent-width = 4
line-length = 140

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
extend-select = [
    "E",   # pycodestyle
    "F",   # Pyflakes
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "I",   # isort
    "D",   # pydocstyle
]

ignore = [
    # pydocstyle ignore
    "D100", # Missing docstring in public module
    "D101", # Missing docstring in public class
    "D102", # Missing docstring in public method
    "D103", # Missing docstring in public function
    "D104", # Missing docstring in public package
    "D105", # Missing docstring in magic method
    "D106", # Missing docstring in public nested class
    "D107", # Missing docstring in `__init__`
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
minversion = "2.0"
addopts = "-rfEX -p pytester --strict-markers --doctest-modules"
norecursedirs = ["docs/scripts", "build", "dist"]
testpaths = ["test"]

[project.scripts]
"parse-hexstring" = "tools:parse_hexstring"
